--- a/ci/linux/Dockerfile.ubuntu22.04
+++ b/ci/linux/Dockerfile.ubuntu22.04
@@ -40,7 +40,7 @@ RUN apt-get update \
     ocl-icd-libopencl1 ocl-icd-opencl-dev opencl-headers \
     libssl-dev patch patchelf libpcsclite-dev \
     libpulse0 libpulse-mainloop-glib0 libpulse-dev \
-    qtbase5-dev libreadline-dev libsqlite3-dev libsystemd-dev tcl-dev tcsh tk-dev \
+    qtbase5-dev libreadline-dev libsqlite3-dev libsystemd-dev libudev-dev tcl-dev tcsh tk-dev \
     wget liblzma-dev yasm zip unzip zlib1g-dev pkg-config xz-utils \
     && rm -rf /var/lib/apt/lists/*
 
