Enhance build_in_container.sh for improved error handling and directory management
Add checks to ensure the OpenRV directory is writable and that the .git directory is present after cloning. This prevents silent failures during the build process. Update Dockerfile to create the OpenRV directory, ensuring proper setup for the build environment.

--- a/ci/linux/Dockerfile.ubuntu22.04
+++ b/ci/linux/Dockerfile.ubuntu22.04
@@ -106,7 +106,7 @@ USER root
 RUN chmod +x /ci/detect_qt.sh /ci/build_in_container.sh
 USER rv
 
-RUN mkdir -p /home/rv/out
+RUN mkdir -p /home/rv/out /home/rv/OpenRV
 WORKDIR /home/rv
 
 ENTRYPOINT ["/ci/build_in_container.sh"]
