Add .gitattributes for patch file handling and update GitHub Actions workflow
Introduce a new .gitattributes file to enforce LF line endings for patch files, ensuring compatibility across platforms. Additionally, modify the openrv-release.yml workflow to set the entrypoint for the Docker container, streamlining the execution of the build_in_container.sh script.

--- a/.github/workflows/openrv-release.yml
+++ b/.github/workflows/openrv-release.yml
@@ -183,6 +183,7 @@ jobs:
           [ -n "$BMD_DECKLINK_SDK_ZIP_URL" ] && BMD_E="-e BMD_DECKLINK_SDK_ZIP_URL=$BMD_DECKLINK_SDK_ZIP_URL"
           [ -n "$NDI_SDK_URL" ] && NDI_E="-e NDI_SDK_URL=$NDI_SDK_URL"
           docker run --rm \
+            --entrypoint bash \
             -e OPENRV_TAG="${{ env.OPENRV_TAG }}" \
             -e OPENRV_REPO="${{ env.OPENRV_REPO }}" \
             -e DISTRO_SUFFIX=linux-ubuntu22.04 \
@@ -191,7 +192,7 @@ jobs:
             -v "${{ github.workspace }}/openrv-build-cache-ubuntu:/home/rv/OpenRV/_build" \
             -v "${{ github.workspace }}/out:/out" \
             openrv-build-ubuntu \
-            bash /ci/build_in_container.sh
+            /ci/build_in_container.sh
 
       - name: Save OpenRV build cache (Ubuntu 22.04)
         if: always()
