disabling linux ubuntu builds

--- a/.github/workflows/openrv-release.yml
+++ b/.github/workflows/openrv-release.yml
@@ -122,6 +122,7 @@ jobs:
     name: Linux (Ubuntu 22.04, experimental)
     runs-on: ubuntu-latest
     continue-on-error: false
+    if: false # DISABLED
     steps:
       - name: Checkout
         uses: actions/checkout@v4
