--- a/.github/workflows/openrv-release.yml
+++ b/.github/workflows/openrv-release.yml
@@ -1,6 +1,6 @@
 # OpenRV release build: triggered on push of tags matching v*
 # Builds from upstream AcademySoftwareFoundation/OpenRV at the tag.
-# Jobs: linux-rocky9 (required), linux-ubuntu (optional), windows (required), release
+# Jobs: linux-rocky9, linux-rocky8, linux-ubuntu (optional), windows (required), release
 name: OpenRV Release
 
 on:
@@ -117,6 +117,111 @@ jobs:
         with:
           name: linux-rocky9
           path: out/OpenRV-${{ env.OPENRV_TAG }}-linux-rocky9-x86_64.tar.gz
+
+  linux-rocky8:
+    name: Linux (Rocky 8)
+    runs-on: ubuntu-latest
+    continue-on-error: false
+    if: false # DISABLED
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: false
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: true
+
+      - name: Get OpenRV tag commit SHA
+        id: openrv-sha
+        run: |
+          SHA=$(git ls-remote "${{ env.OPENRV_REPO }}" "refs/tags/${{ env.OPENRV_TAG }}^{}" 2>/dev/null | cut -f1)
+          [ -z "$SHA" ] && SHA=$(git ls-remote "${{ env.OPENRV_REPO }}" "refs/tags/${{ env.OPENRV_TAG }}" 2>/dev/null | cut -f1)
+          echo "sha=${SHA}" >> $GITHUB_OUTPUT
+          echo "Resolved ${{ env.OPENRV_TAG }} to ${SHA}"
+
+      - name: Restore OpenRV clone (Dockerfile context)
+        id: openrv-cache
+        uses: actions/cache@v4
+        with:
+          path: openrv-src
+          key: openrv-rocky8-${{ env.OPENRV_TAG }}-${{ steps.openrv-sha.outputs.sha }}
+
+      - name: Clone OpenRV
+        if: steps.openrv-cache.outputs.cache-hit != 'true'
+        run: |
+          git clone --depth 1 --branch "${{ env.OPENRV_TAG }}" "${{ env.OPENRV_REPO }}" openrv-src
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build vanilla Docker image (upstream Rocky 8 Dockerfile)
+        uses: docker/build-push-action@v6
+        with:
+          context: openrv-src
+          file: openrv-src/dockerfiles/Dockerfile.Linux-Rocky8
+          load: true
+          tags: openrv-rocky8-base
+          cache-from: type=gha,scope=rocky8
+          cache-to: type=gha,mode=max,scope=rocky8
+          push: false
+
+      # Use host Docker (not Buildx) so FROM openrv-rocky8-base resolves from the image loaded in the previous step
+      - name: Build extended Docker image (vanilla + GL/devel packages)
+        run: docker build -f ci/linux/Dockerfile.rocky8-extended -t openrv-build-rocky8 .
+
+      - name: Restore OpenRV build cache (Rocky 8)
+        uses: actions/cache/restore@v4
+        with:
+          path: ${{ github.workspace }}/openrv-build-cache-rocky8
+          key: openrv-rocky8-build-${{ env.OPENRV_TAG }}-${{ steps.openrv-sha.outputs.sha }}-${{ github.run_id }}
+          restore-keys: |
+            openrv-rocky8-build-${{ env.OPENRV_TAG }}-${{ steps.openrv-sha.outputs.sha }}-
+
+      - name: Prepare build cache directory (Rocky 8)
+        run: |
+          mkdir -p ${{ github.workspace }}/openrv-build-cache-rocky8
+          chmod 777 ${{ github.workspace }}/openrv-build-cache-rocky8
+
+      - name: Run OpenRV build (Rocky 8)
+        env:
+          BMD_DECKLINK_SDK_ZIP_URL: ${{ secrets.BMD_DECKLINK_SDK_ZIP_URL }}
+          NDI_SDK_URL: ${{ secrets.NDI_SDK_URL }}
+        run: |
+          mkdir -p out
+          BMD_E=""; NDI_E=""
+          [ -n "$BMD_DECKLINK_SDK_ZIP_URL" ] && BMD_E="-e BMD_DECKLINK_SDK_ZIP_URL=$BMD_DECKLINK_SDK_ZIP_URL"
+          [ -n "$NDI_SDK_URL" ] && NDI_E="-e NDI_SDK_URL=$NDI_SDK_URL"
+          docker run --rm \
+            -e OPENRV_TAG="${{ env.OPENRV_TAG }}" \
+            -e OPENRV_REPO="${{ env.OPENRV_REPO }}" \
+            -e DISTRO_SUFFIX=linux-rocky8 \
+            -e RV_VFX_PLATFORM=CY2023 \
+            $BMD_E $NDI_E \
+            -v "${{ github.workspace }}/ci/linux:/ci:ro" \
+            -v "${{ github.workspace }}/openrv-build-cache-rocky8:/home/rv/OpenRV/_build" \
+            -v "${{ github.workspace }}/out:/out" \
+            openrv-build-rocky8 \
+            bash /ci/build_in_container.sh
+
+      - name: Save OpenRV build cache (Rocky 8)
+        if: always()
+        uses: actions/cache/save@v4
+        with:
+          path: ${{ github.workspace }}/openrv-build-cache-rocky8
+          key: openrv-rocky8-build-${{ env.OPENRV_TAG }}-${{ steps.openrv-sha.outputs.sha }}-${{ github.run_id }}
+
+      - name: Upload Rocky8 artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux-rocky8
+          path: out/OpenRV-${{ env.OPENRV_TAG }}-linux-rocky8-x86_64.tar.gz
 
   linux-ubuntu:
     name: Linux (Ubuntu 22.04, experimental)
@@ -492,7 +597,7 @@ jobs:
   release:
     name: Create Release
     runs-on: ubuntu-latest
-    needs: [linux-rocky9, linux-ubuntu, windows]
+    needs: [linux-rocky9, linux-rocky8, linux-ubuntu, windows]
     permissions:
       contents: write
     steps:
@@ -509,6 +614,7 @@ jobs:
           draft: false
           files: |
             release-artifacts/linux-rocky9/*
+            release-artifacts/linux-rocky8/*
             release-artifacts/windows/*
             release-artifacts/linux-ubuntu/*
         env:
