Add Git SSL backend configuration for MSYS2 in workflow
- Introduced a step in the openrv-release.yml workflow to set the Git SSL backend to OpenSSL for MSYS2, ensuring compatibility during the cloning process. This enhancement aims to improve the reliability of the build process on Windows environments.

--- a/.github/workflows/openrv-release.yml
+++ b/.github/workflows/openrv-release.yml
@@ -530,6 +530,10 @@ jobs:
           "NDI_ROOT=$ndiRoot" | Out-File -FilePath $env:GITHUB_ENV -Append
         shell: pwsh
 
+      - name: Set Git SSL backend for clone (MSYS2 git uses OpenSSL)
+        shell: pwsh
+        run: git config --global http.sslBackend openssl
+
       - name: Build OpenRV (Windows) - Clone
         run: |
           .\ci\windows\build_windows.ps1 -Phase Clone `
