--- a/.github/workflows/openrv-release.yml
+++ b/.github/workflows/openrv-release.yml
@@ -277,6 +277,8 @@ jobs:
     name: Windows
     runs-on: windows-latest
     continue-on-error: false
+    env:
+      WINDOWS_BUILD_SCRIPTS_HASH: ${{ hashFiles('ci/windows/build_windows.ps1', 'ci/windows/ffmpeg_windows_patched.cmake') }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -436,9 +438,9 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: C:\OpenRV\_build
-          key: openrv-windows-build-${{ env.OPENRV_TAG }}-${{ steps.openrv-sha.outputs.sha }}-${{ github.run_id }}
+          key: openrv-windows-build-${{ env.OPENRV_TAG }}-${{ steps.openrv-sha.outputs.sha }}-${{ env.WINDOWS_BUILD_SCRIPTS_HASH }}-${{ github.run_id }}
           restore-keys: |
-            openrv-windows-build-${{ env.OPENRV_TAG }}-${{ steps.openrv-sha.outputs.sha }}-
+            openrv-windows-build-${{ env.OPENRV_TAG }}-${{ steps.openrv-sha.outputs.sha }}-${{ env.WINDOWS_BUILD_SCRIPTS_HASH }}-
 
       - name: Build OpenRV (Windows) - Configure
         run: .\ci\windows\build_windows.ps1 -Phase Configure -Tag "${{ env.OPENRV_TAG }}" -WorkDir "C:\OpenRV" -BMDDeckLinkSdkZipPath "${{ env.BMD_PATH }}" -NDISdkRoot "${{ env.NDI_ROOT }}"
@@ -461,7 +463,7 @@ jobs:
         uses: actions/cache/save@v4
         with:
           path: C:\OpenRV\_build
-          key: openrv-windows-build-${{ env.OPENRV_TAG }}-${{ steps.openrv-sha.outputs.sha }}-${{ github.run_id }}
+          key: openrv-windows-build-${{ env.OPENRV_TAG }}-${{ steps.openrv-sha.outputs.sha }}-${{ env.WINDOWS_BUILD_SCRIPTS_HASH }}-${{ github.run_id }}
 
       - name: Package OpenRV (Windows)
         run: .\ci\windows\package_windows.ps1 -OpenRVRoot "C:\OpenRV" -Tag "${{ env.OPENRV_TAG }}" -OutDir dist
